# UBB-Computer-Science

./: README.md
Year/: manage.py
Year 1/Semester 1/FP (Python)/a1-dany002/: p1.py  p2.py  p3.py
Year 1/Semester 1/FP (Python)/a11-dany002/: README.md
Year 1/Semester 1/FP (Python)/a2-dany002/: README.md
Year 1/Semester 1/FP (Python)/a3-dany002/: README.md
Year 1/Semester 1/FP (Python)/a4-dany002/: README.md
Year 1/Semester 1/FP (Python)/a5-dany002/: README.md
Year 1/Semester 1/FP (Python)/a678-dany002/: README.md
Year 1/Semester 2/: lab3_manual_execution  lab5  main.py  random_graph1.txt
Year 1/Semester 2/DSA/LAB1/: App.cpp  ExtendedTest.cpp  README.md  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
Year 1/Semester 2/DSA/LAB2/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  Map.cpp  Map.h  MapIterator.cpp  MapIterator.h  README.md  ShortTest.cpp
Year 1/Semester 2/DSA/LAB3/: App.cpp  CMakeLists.txt  README.md  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp
Year 1/Semester 2/DSA/LAB4/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  SMIterator.cpp  SMIterator.h  ShortTest.cpp  SortedMap.cpp  SortedMap.h
Year 1/Semester 2/DSA/LAB5/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  ShortTest.cpp  SortedIteratedList.cpp  SortedIteratedList.h
Year 1/Semester 2/Grafuri/: README.md  dwag  lab3_negative  lab4_manual_execution.txt  manual_execution  random_graph2.txt
Year 1/Semester 2/Grafuri/src/: DirectedGraph.py  UI.py
Year 1/Semester 2/Graph algorithms/LAB 1-2/: README.md  graph10k.txt  graph1k.txt  manual_execution
Year 1/Semester 2/OOP/a1-dany002/: README.md
Year 1/Semester 2/OOP/a11-12-dany002/: CMakeLists.txt  README.md  test.HTML  wow
Year 1/Semester 2/OOP/a11-12-dany002/src/: Controller.cpp  Controller.h  CsvFiles.cpp  CsvFiles.h  Exceptions.cpp  Exceptions.h  GUI.cpp  GUI.h  HtmlFile.h  Movie.cpp  Movie.h  Repository.cpp  Repository.h  TextFiles.cpp  TextFiles.h  UI.cpp  WatchList.cpp  WatchList.h  main.cpp
Year 1/Semester 2/OOP/a14-dany002/: CMakeLists.txt  README.md
Year 1/Semester 2/OOP/a14-dany002/src/: Controller.cpp  Controller.h  Exceptions.h  Movie.cpp  Movie.h  TextFiles.h  UI.h  Undo.cpp  Undo.h  WatchList.h  WatchListGUI.cpp  WatchListGUI.ui  admin_or_user.cpp  admin_or_user.ui  usergui.ui
Year 1/Semester 2/OOP/a3-4-dany002/: README.md
Year 1/Semester 2/OOP/a5-6-dany002/: README.md
Year 1/Semester 2/OOP/a8-9-dany002/: CMakeLists.txt  README.md  UML_life.mdj  example.csv  example.html
Year 1/Semester 2/OOP/a8-9-dany002/src/: Controller.cpp  DynamicVector.h  HtmlFile.cpp  Repository.cpp  Repository.h  Tests.cpp  TextFiles.cpp  TextFiles.h  WatchList.cpp  WatchList.h  main.cpp
Year 1/Semester 2/OOP/extra/: Aircraft.cpp  Aircraft.h  Balloon.cpp  Balloon.h  CMakeLists.txt  Helicopter.cpp  Helicopter.h  Plane.cpp  Plane.h  README.md  Repo.cpp  Repo.h  Service.cpp  Service.h  UI.cpp  UI.h  main.cpp
Year 1/Semester 2/OOP/t2-dany002-1/: Block.cpp  Block.h  Building.cpp  Building.h  House.cpp  House.h  README.md  Service.cpp  Service.h  UI.cpp  UI.h  main.cpp
Year 1/Semester 2/src/: DirectedGraph.py
Year 2/APM ( Java )/: A2
Year 2/APM ( Java )/A3/: log4.txt
Year 2/APM ( Java )/A3/src/: Main.java
Year 2/APM ( Java )/A4/: log2.txt  log3.txt  log4.txt  log5.txt  log6.txt  log8.txt
Year 2/APM ( Java )/A6/: log1.txt  log3.txt  log8.txt
Year 2/APM ( Java )/A7/: log4.txt  log6.txt  log7.txt  pom.xml  test.txt
Year 2/APM ( Java )/CountDownLatch/: asf  pom.xml  qwfed  wafs  wdas
Year 2/APM ( Java )/CountSemaphore/: esd  etc  yep
Year 2/APM ( Java )/ForStatement/: for.txt  fpr.txt  idk.txt
Year 2/APM ( Java )/Lab1/: README.md  examples.txt
Year 2/APM ( Java )/Lab1/src/: Main.java
Year 2/APM ( Java )/MulStatement/: mul.txt  pom.xml
Year 2/APM ( Java )/RepeatStatement/: repeat.txt  wdasd
Year 2/APM ( Java )/SleepStatement/: asdas  log.txt  sleep.txt
Year 2/APM ( Java )/SwitchStatement/: switch.txt
Year 2/APM ( Java )/test_ex1_ForAgain/: asf  asfg  etc.txt  qASF  sure.txt  testtest
Year 2/APM ( Java )/test_ex2_LockTable/: asf  b.txt  saf
Year 2/Database (SQL)/LAB1/: lab1.sql
Year 2/Database (SQL)/LAB2/: lab2.sql
Year 2/Database (SQL)/LAB3/: README.md  lab3.sql
Year 2/Database (SQL)/LAB4/: lab4.sql
Year 2/Database (SQL)/LAB5/: lab5.sql
Year 2/FLP (Prolog and Lisp)/: Lab1  lab2.pl  lab3.pl
Year 2/FLP (Prolog and Lisp)/LAB1/: lab1.py
Year 2/FLP (Prolog and Lisp)/LAB2/: lab2.pl
Year 2/FLP (Prolog and Lisp)/LAB5/: l1a.lisp  l1b.lisp
Year 2/FLP (Prolog and Lisp)/test/: README.md
Year 2/Probability and Statistics (Matlab)/LAB2/: lab2.m
Year 2/Probability and Statistics (Matlab)/LAB3/: lab3ex2a.m  lab3ex2b.m
Year 2/Probability and Statistics (Matlab)/LAB4/: geometric.m  pascal.m
Year 2/Probability and Statistics (Matlab)/LAB5/: ex2.m  ex3.m
Year 2/Semester 1/APM ( Java )/A3/: log1.txt  log3.txt
Year 2/Semester 1/APM ( Java )/A4/: log1.txt  log2.txt  log8.txt
Year 2/Semester 1/APM ( Java )/A6/: log1.txt  log5.txt
Year 2/Semester 1/APM ( Java )/A7/: ASSF  README.md  log3.txt  log4  test.txt
Year 2/Semester 1/APM ( Java )/ConditionalAssignmentStatement/: composite.txt  pom.xml
Year 2/Semester 1/APM ( Java )/CountDownLatch/: asd  wfwedf
Year 2/Semester 1/APM ( Java )/CountSemaphore/: pom.xml
Year 2/Semester 1/APM ( Java )/ForStatement/: a.txt  pom.xml
Year 2/Semester 1/APM ( Java )/RepeatStatement/: pom.xml
Year 2/Semester 1/APM ( Java )/SleepStatement/: pom.xml  sdasd
Year 2/Semester 1/APM ( Java )/SwitchStatement/: pom.xml
Year 2/Semester 1/APM ( Java )/WaitStatement/: pom.xml  wait.txt
Year 2/Semester 1/APM ( Java )/test_ex1_ForAgain/: a  pom.xml  sa  sad  saf  works.txt
Year 2/Semester 1/APM ( Java )/test_ex2_LockTable/: a.txt  ewafs  pom.xml
Year 2/Semester 1/Database (SQL)/LAB1/: README.md  lab1.sql
Year 2/Semester 1/Database (SQL)/LAB2/: README.md
Year 2/Semester 1/Database (SQL)/LAB4/: README.md
Year/LAB3/: asgi.py  settings.py  urls.py  wsgi.py
Year3/Semester1/MA/: README.md
(+968 files in other folders)
